fix collapsed sidebar misssing hover effects

--- a/imports/layout/style.css
+++ b/imports/layout/style.css
@@ -36,7 +36,9 @@ body .page-header {
   height: calc(100vh - 120px);
   overflow-y: scroll;
 }
-
+.sidebar-collapse .main-sidebar .sidebar {
+  overflow-y: unset;
+}
 @media (max-width: 991px) {
   .main-sidebar .sidebar {
     height: calc(100vh - 170px);
